fix: scrollbar style

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -32,7 +32,12 @@ body {
   position: relative;
 }
 ::-webkit-scrollbar {
-  display: none;
+  background-color: hsl(var(--b2));
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #16160a;
+  height: 6rem;
 }
 
 .input-group {
